--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+SampleServerSocket/bin
+SampleServerSocket/Deploy_*
+SampleServerSocket/doc
+SampleServerSocket/lib/*.jar
+SampleServerSocket/lib/*/*
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
